version 1.9.14, in progress
- Some fixes for the SAS xport file importer
- Fix for gretl-quartz (Mac) package: enable aquaterm in
  the gnuplot build
- Experimental: use daily dates when plotting daily/weekly
  data and there are not too many observations

2013-10-24 version 1.9.13
- Add Bulgarian, Catalan and Galician translations
- Add new functions: psum(), prodc(), prodr(), toupper(),
  getline(), isodate(), regsub(), atof()
- "adf" command: add option to optimize the lag order using
  the procedure recommended by Ng and Perron (2001), and
  make their modified AIC method the default
- "outfile" command: add --quiet option
- "var" command: add syntax to select specific lags
- "boxplot" command: add facility to specify literal gnuplot
  lines, as with the "gnuplot" command
- "setobs" command: add panel-specific options to set panel
  time characteristics and group names
- "join" command: substantial enhancements for dealing with
  realtime data
- Make it legal to set loop_maxiter to 0 (hence disabling
  the safety iteration limit for "while" loops)
- Improve internals of pprintf() -- handle big string args
  properly
- readfile() function: check for valid UTF-8 and recode if
  possible if the text is not UTF-8
- mwrite() and mread() functions: add support for gzip
  compression
- setnote() function: add an entry to the function reference
- mshape() function: allow scalar as first argument
- filter() function: allow matrix as first argument
- GUI: add stacked-bar option for FEVD plot in connection
  with VAR estimation
- Fix a few small GUI memory leaks
- Linux and Windows: add check for multiple instances of
  gretl, and choice to open a double-clicked file in the
  prior gretl instance, if any
- Fix bug: encoding problem when printing from model window
  on Windows
- Fix bug: "catch" not working properly when applied to
  genr expressions within loops, and also for multi-line
  commands in loops
- Fix bug: bad behavior when taking the transpose of a